Updated images srcs in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="Contactus.html">Contact us</a></li>
+        <li><a href="contactus.html">Contact us</a></li>
       </ul>
     </nav>
 
@@ -24,7 +24,7 @@
     <div>
       <figure>
         <img
-          src="8cab9a549a5bc09e4bcc391632d8640d495f4bd3-1200x667.png"
+          src="images/8cab9a549a5bc09e4bcc391632d8640d495f4bd3-1200x667.png"
           alt="KFC Bucket"
           width="400"
           height="222"
@@ -42,7 +42,7 @@
 
       <figure>
         <img
-          src="5283d81c664b43c5f57a3a186d273063.jpeg"
+          src="images/5283d81c664b43c5f57a3a186d273063.jpeg"
           alt="KFC Wings"
           width="300"
           height="200"
@@ -52,7 +52,7 @@
 
       <figure>
         <img
-          src="_12_Meal_for_2_Tenders.png"
+          src="images/_12_Meal_for_2_Tenders.png"
           alt="KFC Fries"
           width="400"
           height="300"
